<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_help_bluetoothTitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/txt_help_bluetoothTitle1"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/black" />

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp"
                app:contentPadding="0dp">

                <ImageView
                    android:id="@+id/img_bluetoothSearch"
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:contentDescription="@string/img_bluetooth_step1_desc"
                    android:focusable="true"
                    android:onClick="openImage"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/bluetooth__search__thumbnail" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp"
                app:contentPadding="0dp">

                <ImageView
                    android:id="@+id/img_bluetoothSettings"
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/img_bluetooth_step2_desc"
                    android:onClick="openImage"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/bluetooth__settings__thumbnail" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp"
                app:contentPadding="0dp">

                <ImageView
                    android:id="@+id/img_bluetoothSettings_add1"
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/img_bluetooth_step3_desc"
                    android:onClick="openImage"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/bluetooth__settings_add1__thumbnail" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp"
                app:contentPadding="0dp">

                <ImageView
                    android:id="@+id/img_bluetoothSettings_add2"
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/img_bluetooth_step4_desc"
                    android:onClick="openImage"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/bluetooth__settings_add2__thumbnail" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp"
                app:contentPadding="0dp">

                <ImageView
                    android:id="@+id/img_bluetoothSettings_add3"
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/img_bluetooth_step5_desc"
                    android:onClick="openImage"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/bluetooth__settings_add3__thumbnail" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp"
                app:contentPadding="0dp">

                <ImageView
                    android:id="@+id/img_bluetoothSettings_add4"
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/img_bluetooth_step6_desc"
                    android:onClick="openImage"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/bluetooth__settings_add4__thumbnail" />
            </android.support.v7.widget.CardView>

        </LinearLayout>

</ScrollView>