<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_help_wifiTitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/txt_help_wifiTitle1"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"
            android:text="Step 1: Check for Connections"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp"
            app:contentPadding="0dp">

            <ImageView
                android:id="@+id/img_wifi_disconnected"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:contentDescription="@string/img_wifi_step1_desc"
                android:focusable="true"
                android:onClick="openImage"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/wifi__disconnected__thumbnail" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/txt_help_wifi_body_step1"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp" />

        <View
            android:id="@+id/view"
            android:layout_width="360dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"
            android:text="Step 2: Connect to the Network"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp"
            app:contentPadding="0dp">

            <ImageView
                android:id="@+id/img_wifi_shouldBe"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/img_wifi_step2_desc"
                android:onClick="openImage"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/wifi__should_be__thumbnail" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/txt_help_wifi_body_step2"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>